--- a/src/app/components/devis-confirmation/devis-confirmation.component.html
+++ b/src/app/components/devis-confirmation/devis-confirmation.component.html
@@ -1,55 +1,52 @@
 <div class="home-button">
-  <a routerLink="/" class="list-group-item list-group-item-action">
-    <div class="d-flex justify-content-center">
-      <p class="m-0">&lsaquo;</p>
-      <svg width="1.6em" height="1.3em" viewBox="0 0 16 16" class="bi bi-house-door-fill" fill="currentColor"
-        xmlns="http://www.w3.org/2000/svg">
+    <a routerLink="/" class="list-group-item list-group-item-action">
+        <div class="d-flex justify-content-center">
+            <p class="m-0">&lsaquo;</p>
+            <svg width="1.6em" height="1.3em" viewBox="0 0 16 16" class="bi bi-house-door-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
         <path
           d="M6.5 10.995V14.5a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5h-4a.5.5 0 0 1-.5-.5V11c0-.25-.25-.5-.5-.5H7c-.25 0-.5.25-.5.495z" />
         <path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z" />
       </svg>
-      <p class="m-0">Retour à l'accueil</p>
-    </div>
-  </a>
+            <p class="m-0">Retour à l'accueil</p>
+        </div>
+    </a>
 </div>
 <div class="container mt-5">
-  <h5 class="mb-2">VOTRE PANIER</h5>
-  <div class="row">
-    <div class="basket" class="col-7">
-      <p-table [value]="basketList">
-        <ng-template pTemplate="body" let-timbre>
-          <tr>
-            <!-- IMAGE -->
-            <td class="imgTd">
-              <button (click)="showTimbreImgDialog(timbre)" class="invisible-button">
+    <h5 class="mb-2">VOTRE PANIER</h5>
+    <div class="row">
+        <div class="basket" class="col-7">
+            <p-table [value]="basketList">
+                <ng-template pTemplate="body" let-timbre>
+                    <tr>
+                        <!-- IMAGE -->
+                        <td class="imgTd">
+                            <button (click)="showTimbreImgDialog(timbre)" class="invisible-button">
                 <img class="img" [src]="timbre.imageTimbreUrl">
               </button>
-            </td>
-            <!--  NUMERO -->
-            <td>
-              <div class="d-flex justify-content-center">
-                <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'">{{timbre.tasType}}</p>
-                <p *ngIf="timbre.numeroTimbre !== 0" class="text-center mb-0 font-weight-bold">N°{{timbre.numeroTimbre}}
-                </p>
-                <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
-                <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
-                <p class="mb-0" *ngIf="timbre.catTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
-                <p class="mb-0" *ngIf="timbre.catTimbre == 'obl' || timbre.catTimbre == 'spe'">{{timbre.optionalInfos}}
-                </p>
-              </div>
-            </td>
-            <!-- PRIX -->
-            <td id="prix-unitaire" class="font-weight-light">PU: {{timbre.prixTimbre}}€</td>
-            <td>
-              <div class=" qtés d-flex justify-content-between">
-                <button [disabled]="1>=timbre.quantite" class="qteBtn d-flex align-items-center" type="button"
-                  (click)='adjustQuantity(timbre, "minus")'><span>-</span></button>
-                <div class="qte">{{timbre.quantite}}</div>
-                <button [disabled]="timbre.quantite >=timbre.maxQuantite" class="qteBtn d-flex align-items-center"
-                  type="button" (click)='adjustQuantity(timbre,"plus")'><span>+</span></button>
-              </div>
-            </td>
-            <td><button type="button" (click)="deleteTimbreFromBasket(timbre)" class="deleteBtn btn btn-outline-danger">
+                        </td>
+                        <!--  NUMERO -->
+                        <td>
+                            <div class="d-flex justify-content-center">
+                                <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'">{{timbre.tasType}}</p>
+                                <p *ngIf="timbre.numeroTimbre !== 0" class="text-center mb-0 font-weight-bold">N°{{timbre.numeroTimbre}}
+                                </p>
+                                <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
+                                <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
+                                <p class="mb-0" *ngIf="timbre.catTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
+                                <p class="mb-0" *ngIf="timbre.catTimbre == 'obl' || timbre.catTimbre == 'spe'">{{timbre.optionalInfos}}
+                                </p>
+                            </div>
+                        </td>
+                        <!-- PRIX -->
+                        <td id="prix-unitaire" class="font-weight-light">PU: {{timbre.prixTimbre}}€</td>
+                        <td>
+                            <div class=" qtés d-flex justify-content-between">
+                                <button [disabled]="1>=timbre.quantite" class="qteBtn d-flex align-items-center" type="button" (click)='adjustQuantity(timbre, "minus")'><span>-</span></button>
+                                <div class="qte">{{timbre.quantite}}</div>
+                                <button [disabled]="timbre.quantite >=timbre.maxQuantite" class="qteBtn d-flex align-items-center" type="button" (click)='adjustQuantity(timbre,"plus")'><span>+</span></button>
+                            </div>
+                        </td>
+                        <td><button type="button" (click)="deleteTimbreFromBasket(timbre)" class="deleteBtn btn btn-outline-danger">
                 <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -57,65 +54,60 @@
                   <path fill-rule="evenodd"
                     d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
                 </svg> </button>
-            </td>
-            <td>{{timbre.quantite*timbre.prixTimbre|number:'1.2'}}€</td>
-          </tr>
-        </ng-template>
-      </p-table>
-    </div>
-
-    <div class="col-5">
-      <!-- SOUS TOTAL -->
-      <div id="total-articles" class="d-flex justify-content-between">
-        <span>Total articles </span>
-        <span>{{totalArticles|number:'1.2'}}€</span>
-      </div>
-      <!-- CHOIX LIVRAISON -->
-      <div id="livraison" class="d-flex justify-content-between">
-        <span class="align-self-center">Livraison <span style="color:red">*</span></span>
-        <div style="width:14.4em">
-          <p-radioButton *ngFor="let option of livraisons" name="livraisons" value="{{option.prix}}"
-            label="{{option.label}}" [(ngModel)]="livraison"></p-radioButton>
+                        </td>
+                        <td>{{timbre.quantite*timbre.prixTimbre|number:'1.2'}}€</td>
+                    </tr>
+                </ng-template>
+            </p-table>
         </div>
-      </div>
-      <!-- INPUT EMAIL -->
-      <div id="email" class="d-flex justify-content-between">
-        <span pTooltip="Votre email ne sera utilisé que pour vous recontacter dans le cadre de votre commande."
-          tooltipPosition="left" class="align-self-center"><svg width="1em" height="1em" viewBox="0 0 16 16"
+
+        <div class="col-5">
+            <!-- SOUS TOTAL -->
+            <div id="total-articles" class="d-flex justify-content-between">
+                <span>Total articles </span>
+                <span>{{totalArticles|number:'1.2'}}€</span>
+            </div>
+            <!-- CHOIX LIVRAISON -->
+            <div id="livraison" class="d-flex justify-content-between">
+                <span class="align-self-center">Livraison <span style="color:red">*</span></span>
+                <div style="width:14.4em">
+                    <p-radioButton *ngFor="let option of livraisons" name="livraisons" value="{{option.prix}}" label="{{option.label}}" [(ngModel)]="livraison"></p-radioButton>
+                </div>
+            </div>
+            <!-- INPUT EMAIL -->
+            <div id="email" class="d-flex justify-content-between">
+                <span pTooltip="Votre email ne sera utilisé que pour vous recontacter dans le cadre de votre commande." tooltipPosition="left" class="align-self-center"><svg width="1em" height="1em" viewBox="0 0 16 16"
             class="bi bi-info-circle-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd"
               d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16zm.93-9.412l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM8 5.5a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" />
           </svg> Votre email <span style="color:red">*</span></span>
-        <input name="email" required placeholder="adresse@email.fr" id="emailInput" type="te" pInputText
-          [(ngModel)]="email" pKeyFilter="email">
-      </div>
-      <div id="optionalMessage">
-        <div>
-          <span>Ajouter un message</span>
-          <input class="align-self-center ml-4" type="checkbox" [(ngModel)]="addMessage">
+                <input name="email" required placeholder="adresse@email.fr" id="emailInput" type="te" pInputText [(ngModel)]="email" pKeyFilter="email">
+            </div>
+            <div id="optionalMessage">
+                <div>
+                    <span>Ajouter un message</span>
+                    <input class="align-self-center ml-4" type="checkbox" [(ngModel)]="addMessage">
+                </div>
+                <textarea *ngIf="addMessage" placeholder="Votre message" [rows]="5" id="msgInput" pInputTextarea [(ngModel)]="message"></textarea>
+            </div>
+            <div>
+                <p style="color:red;font-size:0.7rem">* champs obligatoires</p>
+            </div>
+            <div id="total">
+                <div class="d-flex justify-content-between">
+                    <span class="font-weight-bold align-self-center">Total</span>
+                    <span class="font-weight-bold" id="totalPrice">{{total|number:'1.2'}}€</span>
+                </div>
+                <button id="sendBtn" type="button" (click)='sendDevis()'>ENVOYER LA COMMANDE</button>
+            </div>
         </div>
-        <textarea *ngIf="addMessage" placeholder="Votre message" [rows]="5" id="msgInput" pInputTextarea
-          [(ngModel)]="message"></textarea>
-      </div>
-      <div>
-        <p style="color:red;font-size:0.7rem">* champs obligatoires</p>
-      </div>
-      <div id="total">
-        <div class="d-flex justify-content-between">
-          <span class="font-weight-bold align-self-center">Total</span>
-          <span class="font-weight-bold" id="totalPrice">{{total|number:'1.2'}}€</span>
-        </div>
-        <button id="sendBtn" type="button" (click)='sendDevis()'>ENVOYER LA COMMANDE</button>
-      </div>
     </div>
-  </div>
 </div>
 
 
 <!-- Modal pour l'affichage de l'image du timbre -->
-<p-dialog [dismissableMask]="true" [modal]="true" header="Timbre N°{{selectedTimbre.numeroTimbre}}"
-  [(visible)]="displayTimbreModal">
-  <div class="d-flex justify-content-center">
-    <img class="focusedStampImg" src="{{selectedTimbre.imageTimbreUrl}}">
-  </div>
+<p-dialog [dismissableMask]="true" [modal]="true" header="Timbre N°{{selectedTimbreNumber}}" [(visible)]="displayTimbreModal">
+    <div class="d-flex justify-content-center">
+        <img class="focusedStampImg" src="{{selectedTimbre.imageTimbreUrl}}">
+    </div>
 </p-dialog>
